Fix visible scroll for card containers in Edge

--- a/assets/css/card.css
+++ b/assets/css/card.css
@@ -1,5 +1,6 @@
 .card-container {
   overflow-x: auto;
+  -ms-overflow-style: none;
 }
 
 .card-container::-webkit-scrollbar {
